// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The MetricPushApi stack matches the snapshot 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "HTTP API to push a metric to cloudwatch so we can alarm on errors",
  "Mappings": {
    "Constants": {
      "Alarm": {
        "Process": "Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "Urgent": "URGENT 9-5 -",
      },
    },
    "StageMap": {
      "CODE": {
        "AlarmActionsEnabled": false,
        "ApiName": "metric-push-api-api-CODE",
        "DomainName": "metric-push-api-code.support.guardianapis.com",
      },
      "PROD": {
        "AlarmActionsEnabled": true,
        "ApiName": "metric-push-api-api-PROD",
        "DomainName": "metric-push-api-prod.support.guardianapis.com",
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "Stage": {
      "AllowedValues": [
        "PROD",
        "CODE",
      ],
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "5xxApiAlarmF6ACE36F": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmName": "URGENT 9-5 - CODE metric-push-api-CODE API Gateway is returning 5XX errors",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "metric-push-api-api-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "HighClientSideErrorRateAlarm0026FCB2": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - some or all browsers are failing to render support client side pages. Log in to Sentry to see these errors: https://the-guardian.sentry.io/discover/results/?project=1213654&query="Fatal error rendering page"&queryDataset=error-events&sort=-count&statsPeriod=24h Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit metric-push-api-CODE",
        "AlarmName": "URGENT 9-5 - CODE fatal client-side errors are being reported to sentry for support-frontend",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "mtotalcount - (m5xxcount + m4xxcount)",
            "Id": "expr_1",
            "Label": "mtotal2xx",
          },
          {
            "Id": "mtotalcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-CODE",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m5xxcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-CODE",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m4xxcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-CODE",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MetricPushAPI": {
      "Properties": {
        "Description": "HTTP API to push a metric to cloudwatch so we can alarm on errors",
        "Name": {
          "Fn::FindInMap": [
            "StageMap",
            {
              "Ref": "Stage",
            },
            "ApiName",
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "MetricPushAPIDeployment": {
      "DependsOn": [
        "MetricPushMethod",
      ],
      "Properties": {
        "Description": "Deploys metric-push-api into an environment/stage",
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "MetricPushAPIStage": {
      "DependsOn": [
        "MetricPushMethod",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "MetricPushAPIDeployment",
        },
        "Description": "Stage for metric-push-api",
        "MethodSettings": [
          {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "ERROR",
            "ResourcePath": "/*",
          },
        ],
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
        "StageName": {
          "Fn::Sub": "\${Stage}",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "MetricPushBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "MetricPushDomainName",
        },
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
        "Stage": "CODE",
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "MetricPushDNSRecord": {
      "Properties": {
        "Comment": "CNAME for metric-push-api API CODE",
        "HostedZoneName": "support.guardianapis.com.",
        "Name": "metric-push-api-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "MetricPushDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "MetricPushDomainName": {
      "Properties": {
        "DomainName": "metric-push-api-code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "MetricPushMethod": {
      "DependsOn": [
        "MetricPushAPI",
        "MetricPushProxyResource",
      ],
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Cache-control": "'no-cache'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{"statusCode": 200}",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Cache-control": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "MetricPushProxyResource",
        },
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "MetricPushProxyResource": {
      "DependsOn": [
        "MetricPushAPI",
      ],
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "MetricPushAPI",
            "RootResourceId",
          ],
        },
        "PathPart": "metric-push-api",
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The MetricPushApi stack matches the snapshot 2`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "HTTP API to push a metric to cloudwatch so we can alarm on errors",
  "Mappings": {
    "Constants": {
      "Alarm": {
        "Process": "Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "Urgent": "URGENT 9-5 -",
      },
    },
    "StageMap": {
      "CODE": {
        "AlarmActionsEnabled": false,
        "ApiName": "metric-push-api-api-CODE",
        "DomainName": "metric-push-api-code.support.guardianapis.com",
      },
      "PROD": {
        "AlarmActionsEnabled": true,
        "ApiName": "metric-push-api-api-PROD",
        "DomainName": "metric-push-api-prod.support.guardianapis.com",
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "Stage": {
      "AllowedValues": [
        "PROD",
        "CODE",
      ],
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "5xxApiAlarmF6ACE36F": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmName": "URGENT 9-5 - PROD metric-push-api-PROD API Gateway is returning 5XX errors",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "metric-push-api-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "HighClientSideErrorRateAlarm0026FCB2": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - some or all browsers are failing to render support client side pages. Log in to Sentry to see these errors: https://the-guardian.sentry.io/discover/results/?project=1213654&query="Fatal error rendering page"&queryDataset=error-events&sort=-count&statsPeriod=24h Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit metric-push-api-PROD",
        "AlarmName": "URGENT 9-5 - PROD fatal client-side errors are being reported to sentry for support-frontend",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 5,
        "Metrics": [
          {
            "Expression": "mtotalcount - (m5xxcount + m4xxcount)",
            "Id": "expr_1",
            "Label": "mtotal2xx",
          },
          {
            "Id": "mtotalcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-PROD",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m5xxcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-PROD",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m4xxcount",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "metric-push-api-api-PROD",
                  },
                ],
                "MetricName": "4XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MetricPushAPI": {
      "Properties": {
        "Description": "HTTP API to push a metric to cloudwatch so we can alarm on errors",
        "Name": {
          "Fn::FindInMap": [
            "StageMap",
            {
              "Ref": "Stage",
            },
            "ApiName",
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "MetricPushAPIDeployment": {
      "DependsOn": [
        "MetricPushMethod",
      ],
      "Properties": {
        "Description": "Deploys metric-push-api into an environment/stage",
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "MetricPushAPIStage": {
      "DependsOn": [
        "MetricPushMethod",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "MetricPushAPIDeployment",
        },
        "Description": "Stage for metric-push-api",
        "MethodSettings": [
          {
            "DataTraceEnabled": true,
            "HttpMethod": "*",
            "LoggingLevel": "ERROR",
            "ResourcePath": "/*",
          },
        ],
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
        "StageName": {
          "Fn::Sub": "\${Stage}",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "MetricPushBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "MetricPushDomainName",
        },
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
        "Stage": "PROD",
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "MetricPushDNSRecord": {
      "Properties": {
        "Comment": "CNAME for metric-push-api API PROD",
        "HostedZoneName": "support.guardianapis.com.",
        "Name": "metric-push-api-prod.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "MetricPushDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "MetricPushDomainName": {
      "Properties": {
        "DomainName": "metric-push-api-prod.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "MetricPushMethod": {
      "DependsOn": [
        "MetricPushAPI",
        "MetricPushProxyResource",
      ],
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Cache-control": "'no-cache'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{"statusCode": 200}",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Cache-control": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "MetricPushProxyResource",
        },
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "MetricPushProxyResource": {
      "DependsOn": [
        "MetricPushAPI",
      ],
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "MetricPushAPI",
            "RootResourceId",
          ],
        },
        "PathPart": "metric-push-api",
        "RestApiId": {
          "Ref": "MetricPushAPI",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;
